<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="3dp"
        android:background="@drawable/search_bg">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="2dp"
            android:src="@drawable/search_image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:text="@string/sousuo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:id="@+id/school_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/filter_school_bg">
            <TextView
                android:id="@+id/school_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/school"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"/>
            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/triangular"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/type_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/filter_type_bg">
            <TextView
                android:id="@+id/type_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"/>
            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/triangular"/>

        </FrameLayout>
        <FrameLayout
            android:id="@+id/time_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/filter_time_bg">
            <TextView
                android:id="@+id/time_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"/>
            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/triangular"/>
        </FrameLayout>

    </LinearLayout>
    <include
        android:id="@+id/schools"
        layout="@layout/view_school_radiobuttons"/>
    <include
        android:id="@+id/types"
        layout="@layout/view_type_radiobuttons"/>
    <include
        android:id="@+id/times"
        layout="@layout/view_time_radiobuttons"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/events_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/events_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>
